rewrite git history

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 MrPorker/appsettings.json
+MrPorker/appsettings-old.json
+MrPorker/appsettings.development.json
 MrPorker/mrporker-81695-firebase-adminsdk-h6b5z-8e2cb0a3dc.json
 
 ## Ignore Visual Studio temporary files, build results, and
